fix navigation mobile viev

--- a/src/templates/Navigation/navigation.module.scss
+++ b/src/templates/Navigation/navigation.module.scss
@@ -49,7 +49,7 @@
         width: 100%;
         position: absolute;
         // top: 70px;
-        top: -680px;
+        top: -740px;
         left: 0;
         background-color: $second-color;
         border-top: 2px solid $third-color;
